--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^5.0.2",
     "element-plus": "^1.0.2-beta.48",
-    "element-pro-components": "^0.9.4",
+    "element-pro-components": "^0.10.0",
     "quill": "^1.3.7",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8"
@@ -28,6 +28,7 @@
     "prettier": "^2.3.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.7",
+    "vite-plugin-style-import": "^1.0.0",
     "vue-tsc": "^0.0.24"
   }
 }
