--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "element-admin-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "一个基础的后台管理系统模版，方便快速开发",
   "author": "tolking <qw13131wang@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -22,29 +22,29 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^1.1.1",
+    "@element-plus/icons-vue": "^1.1.3",
     "@vueuse/core": "^7.7.1",
-    "element-plus": "^2.0.5",
-    "element-pro-components": "^0.18.1",
+    "element-plus": "^2.1.3",
+    "element-pro-components": "^0.18.3",
     "quill": "^1.3.7",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/quill": "^2.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vue/compiler-sfc": "^3.2.31",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.5",
-    "prettier": "^2.5.1",
+    "lint-staged": "^12.3.6",
+    "prettier": "^2.6.0",
     "typescript": "^4.6.2",
-    "unplugin-auto-import": "^0.6.1",
+    "unplugin-auto-import": "^0.6.6",
     "unplugin-vue-components": "^0.17.21",
     "vite": "^2.8.6",
     "vue-tsc": "^0.32.1"
