--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-admin-template",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "一个基础的后台管理系统模版，方便快速开发",
   "author": "tolking <qw13131wang@gmail.com>",
   "license": "MIT",
@@ -9,7 +9,7 @@
   },
   "homepage": "https://github.com/tolking/element-admin-template#readme",
   "engines": {
-    "node": ">=12.2.0"
+    "node": ">=16"
   },
   "scripts": {
     "dev": "vite",
@@ -22,29 +22,31 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.6",
-    "@vueuse/core": "^8.9.4",
-    "element-plus": "^2.2.11",
-    "element-pro-components": "^1.2.0",
+    "@element-plus/icons-vue": "^2.0.10",
+    "@vueuse/core": "^9.10.0",
+    "element-plus": "^2.2.28",
+    "element-pro-components": "^1.2.9",
     "quill": "^1.3.7",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@types/node": "^18.6.1",
-    "@types/quill": "^2.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/compiler-sfc": "^3.2.37",
-    "eslint": "^8.20.0",
+    "@types/node": "^18.11.18",
+    "@types/quill": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "eslint": "^8.31.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.3.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.3",
+    "eslint-plugin-vue": "^9.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.2",
+    "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^4.0.4",
     "vue-tsc": "^0.38.9"
   },
   "lint-staged": {
@@ -53,6 +55,13 @@
       "eslint --fix"
     ],
     "*.{html,css,md,json}": "prettier --write"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@types/lodash-es"
+      ]
+    }
   },
   "stackblitz": {
     "installDependencies": false,
