--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "element-admin-template",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "一个基础的后台管理系统模版，方便快速开发",
   "author": "tolking <qw13131wang@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/tolking/element-admin-template/issues"
   },
@@ -22,32 +23,32 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
+    "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^9.13.0",
-    "element-plus": "^2.3.8",
-    "element-pro-components": "^1.2.12",
+    "element-plus": "^2.6.3",
+    "element-pro-components": "^1.3.0",
     "quill": "^1.3.7",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
-    "@types/quill": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/compiler-sfc": "^3.3.4",
-    "eslint": "^8.45.0",
+    "@types/node": "^20.12.4",
+    "@types/quill": "^2.0.14",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/compiler-sfc": "^3.4.21",
+    "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.15.1",
+    "eslint-plugin-vue": "^9.24.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0",
-    "typescript": "^5.1.6",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3",
     "unplugin-auto-import": "^0.13.0",
     "unplugin-vue-components": "^0.23.0",
-    "vite": "^4.4.4",
-    "vue-tsc": "^1.8.5"
+    "vite": "^5.2.8",
+    "vue-tsc": "^2.0.7"
   },
   "lint-staged": {
     "*.{ts,vue,js,tsx,jsx}": [
